tests/errors/test-error-005.slax
version 1.0;

var $i = <test> {
    <one> {
	if (fishing) {
	    fishing;
	}
	if (cooking) {
	    cooking;
	}
    }
    
}